<resources>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">NoNameActivity</string>
    <string name="app_name">NoNameApp</string>
    <string name="add_task">Add Task</string>
    <string name="view_local_tasks">View Local Tasks</string>
    <string name="view_online_tasks">View Online Tasks</string>
    <string name="view_completed_tasks">View Completed Tasks</string>
    <string name="add_task_title">task title</string>
    <string name="add_task_desc">task description</string>
    <string name="add_task_creator">task creator</string>
    <string name="add_task_items_requested">number of items requested</string>
    <string name="add_task_type">Type of task:</string>
    <string name="add_task_text_radio">Text only</string>
    <string name="add_task_image_radio">Image</string>
    <string name="add_task_audio_radio">Audio</string>
    <string name="share_online_checkbox">Share task online</string>
    <string name="create_task_button">Create</string>
    <string name="cancel_task_button">Cancel</string>
    <string name="completed_tasks_title">Completed Tasks</string>
    <string name="my_tasks_label_radio">My Tasks</string>
    <string name="all_tasks_label_radio">All Tasks</string>
    <string name="task_solution_title">Task Solution</string>
    <string name="task_title_label">Task Title:</string>
    <string name="task_desc_label">Description:</string>
    <string name="task_creator_label">Creator:</string>
    <string name="task_type_label">Type:</string>
    <string name="task_items_requested_label"># of items:</string>
    <string name="task_title_placeholder">&lt;task title&gt;</string>
    <string name="task_desc_placeholder">&lt;task description&gt;</string>
    <string name="task_creator_placeholder">&lt;task creator&gt;</string>
    <string name="task_type_placeholder">&lt;task type&gt;</string>
    <string name="task_items_requested_placeholder">&lt;items requested&gt;</string>
    <string name="local_tasks_list_title">Local Tasks</string>
    <string name="add_item_local_task_button">Add Item</string>
    <string name="share_button">Share</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="shared_tasks_title">Shared Tasks</string>
    <string name="view_shared_task_title">Shared Task</string>
    <string name="task_type">Type</string>
    <string name="task_title">Title</string>
    <string name="creator">Creator</string>
    <string name="submit_date">Submit Date</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_view_local_tasks">View Local Tasks</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_add_text_button">Add</string>
    <string name="dialog_add_text_item_title">Add Text Item</string>
    <string name="dialog_text_item_hint">Type the text item here.</string>
    <string name="title_activity_edit_local_task">Edit Local Task</string>
    <string name="title_activity_send_email">SendEmailActivity</string>
    <string name="send_email_button">Send</string>
    <string name="recipient_field">recipient</string>
    <string name="subject_field">subject</string>
    <string name="recipient_label">To:</string>
    <string name="subject_label">Subject:</string>
    <string name="body_field">type your email here</string>
    <string name="title_activity_view_shared_tasks">View Shared Tasks</string>
    <string name="title_activity_take_image">Take Image</string>
    <string name="title_activity_edit_shared_task">Edit Shared Task</string>
    <string name="type_label">Type: </string>
    <string name="title_activity_view_acompleted_task">ViewACompletedTaskActivity</string>
    <string name="view_acompleted_task_title">Completed Task</string>
    <string name="text_item_description">Description</string>
    <string name="text_item_date">Date</string>
    <string name="random_task_btn">Random Task</string>

</resources>