<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/recipientLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/recipient_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
	        android:id="@+id/recipientField"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="7"
	        android:ems="10"
	        android:gravity="top"
	        android:hint="@string/recipient_field" >
	        <requestFocus />
	    </EditText>
        
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/subjectLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/subject_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
	        android:id="@+id/subjectField"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="6"
	        android:ems="10"
	        android:gravity="top"
	        android:hint="@string/subject_field" />
        
    </LinearLayout>
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="10dp"
    android:background="#99999999"
	/>
    
    <EditText
        android:id="@+id/bodyField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:singleLine="false"
	    android:lines="6" 
	    android:layout_marginTop="20dp"
	    android:hint="@string/body_field"/>
    
    <Button
	        android:id="@+id/sendEmailButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="sendEmail"
	        android:text="@string/send_email_button" />

</LinearLayout>
