<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip" >
 
        <TextView
            android:id="@+id/textViewTitle"
            android:text="@string/task_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_column="1" />
 
        <TextView
            android:id="@+id/textViewType"
            android:text="@string/task_type"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_column="2" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip" >
 
        <TextView
            android:id="@+id/textViewCreator"
            android:text="@string/creator"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_column="1" />
 
        <TextView
            android:id="@+id/textViewDate"
            android:text="@string/submit_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_column="2" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="3dip" >

        <ProgressBar
            android:id="@+id/progressBarTaskItems"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_span="2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>
        
	<View
	 	android:id="@+id/Divider"
		android:layout_width="fill_parent"
		android:layout_height="3dp"
		android:layout_span="2"
		android:background="@android:color/darker_gray" />
</TableLayout>